--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  thenotsodarkknight
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
