--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   A Site made by Abeen.
 
   This site is currently under maintanence.
-  
+
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://www.abeenbhattacharya.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.abeenbhattacharya.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: awaitforitbeen
-github_username:  thenotsodarkknight
+github_username: thenotsodarkknight
 
 # Build settings
 markdown: kramdown
