--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This site is currently under maintanence.
 
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://www.abeenbhattacharya.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.abeenbhattacharya.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: awaitforitbeen
 github_username: thenotsodarkknight
 
@@ -30,6 +30,7 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
