--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Abeen Bhattacharya
 email: abeen9@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A Site made by Abeen.
-
-  This site is currently under maintanence.
+  This page is a semi-blog written by me, on probably various things that I feel are important to be discussed about.
 
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://www.abeenbhattacharya.com" # the base hostname & protocol for your site, e.g. http://example.com
