--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@
 title: Abeen Bhattacharya
 email: abeen9@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This page is a semi-blog written by me, on probably various things that I feel are important to be discussed about.
+  A site made by me, Abeen Bhattacharya.
+  This site is currently under maintanence.
 
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://www.abeenbhattacharya.com" # the base hostname & protocol for your site, e.g. http://example.com
