--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-favicon
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
