--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   A site made by me, Abeen Bhattacharya.
   This site is currently under maintanence.
 
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.abeenbhattacharya.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: awaitforitbeen
 github_username: thenotsodarkknight
