--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # NB! Set your site's url, otherwise stuff will break :)
 
-url: "https://www.abeenbhattacharya.com/test"
+url: "https://www.abeenbhattacharya.com"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (https://yourusername.github.io/repository-name)
