--- a/_config.yml
+++ b/_config.yml
@@ -200,7 +200,7 @@ keybase-in-footer: False
 pages_list:
   About: 'about'
   Blog: 'latest-post'
-  Timeline: 'timeline'
+  Academia: 'timeline'
   Contact: 'contact'
 
 # Exclusion list from the generated _site
