--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ force-https: True
 lang: "en"
 author: "Abeen Bhattacharya"
 title: "Abeen Bhattacharya"
-description: "Semi-Blog of Abeen Bhattacharya. Currently under construction."
+description: "A wannabe cool website"
 keywords: "smith, jones, personal, jekyll, theme"
 favicon: "/img/favicon.ico"
 
