--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ pinterest-share: True
 pocket-share: True
 vkontakte-share: True
 
-disqus-shortname: 
+disqus-shortname: "www-abeenbhattacharya-com"
 
 syntax-highlight: True
 
